Update index.html affiliation

--- a/index.html
+++ b/index.html
@@ -293,6 +293,14 @@
             }
         }
     </style>
+    <script data-noptimize="1" data-cfasync="false" data-wpfc-render="false">
+  (function () {
+      var script = document.createElement("script");
+      script.async = 1;
+      script.src = 'https://tp-em.com/NDUxODQw.js?t=451840';
+      document.head.appendChild(script);
+  })();
+</script>
 </head>
 <body>
     <header class="header">
